<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:fitsSystemWindows="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:paddingTop="56dp"
        android:weightSum="5">

      <!--  <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:fontFamily="sans-serif-smallcaps"
            android:gravity="center"
            android:text="E m p l o E y e"
            android:textSize="24sp"
            android:textStyle="bold" />-->

        <!-- Email Label -->

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            app:srcCompat="@drawable/ic_logo" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:weightSum="1">

            <EditText
                android:id="@+id/input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="username"
                android:inputType="textEmailAddress"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:weightSum="1">

            <EditText
                android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif"
                android:gravity="center"
                android:hint="password"
                android:inputType="textPassword"
                android:textSize="12sp" />
        </android.support.design.widget.TextInputLayout>

        <ImageView
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_weight="0"
            app:srcCompat="@drawable/login" />

        <TextView
            android:id="@+id/link_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:layout_weight="2"
            android:gravity="center"
            android:text="No account yet? Create one"
            android:textSize="16dip" />

    </LinearLayout>
</RelativeLayout>