...
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true" />



    <ImageView
        android:id="@+id/visit"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_visit" />

...
