...
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="See the location map" />

                <ImageView
                    android:id="@+id/image_map"
                    android:layout_width="5dp"
                    android:layout_height="20dp"
                    android:layout_weight="1"
                    app:srcCompat="@drawable/map" />

            </LinearLayout>
...
